hero image on small screens issue v9

--- a/styles/about-me.css
+++ b/styles/about-me.css
@@ -5,6 +5,7 @@
   margin: 0 auto;
   margin-top: 50px;
   padding-top: 50px;
+  height: auto;
 }
 
 .about-content,
