--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,8 @@ body {
   /* font-family: 'Raleway', sans-serif;  */
   /* font-family: "Lexend Exa", sans-serif;  */
   /* font-family: "Poppins", sans-serif; */
+  min-height: 100%;
+  background-size: cover;
 }
 
 .float-right {
